...
    android:layout_height="wrap_content"
    tools:context=".Fragments.Badge.BadgeDisplayFragment"
    android:orientation="vertical">


    <android.support.v4.view.ViewPager
        android:id="@+id/badge_viewpager"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
...
