<resources>
    <string name="app_name">MountainMaps</string>
    <string name="title_activity_login">Zaloguj się</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Hasło</string>
    <string name="action_sign_in">Zaloguj się lub zarejestruj!</string>
    <string name="action_sign_in_short">Zaloguj się</string>
    <string name="error_invalid_email">Niepoprawny adres Email</string>
    <string name="error_invalid_password">Hasło jest za krótkie</string>
    <string name="error_incorrect_password">Niepoprawne hasło</string>
    <string name="error_field_required">To pole jest wymagane</string>
    <string name="permission_rationale">"Autouzupełnianie wymaga uprawnień do przeglądania kontaktów.</string>

    <string name="trips_drawer">Trasy</string>
    <string name="badges_drawer">Odznaki</string>
    <string name="login_drawer">Zaloguj się!</string>
    <string name="logout_drawer">Wyloguj się!</string>
    <string name="settings_drawer">Ustawienia</string>

    <string name="badges_next">Następna odznaka: %s</string>
    <string name="badges_points">Posiadane punkty: %d</string>
    <string name="badges_req_points">Wymagane punkty: %d</string>
    <string name="badges_diff">Brakujące punkty: %d</string>
    <string name="badges_completed_1">Gratulacje!</string>
    <string name="badges_completed_2">Zdobyłeś wszystkie możliwe odznaki</string>
    <string name="badges_name">Nazwa: %s</string>
    <string name="badges_date">Data zdobycia: %s</string>
    <string name="badges_image_description">Zdjęcie odznaki</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="hikerSelection">Wpisz ID Turysty</string>

    <string name="new_hikingtrail">Utwórz trasę</string>
    <string name="update_hikingtrail">Modyfikuj trasę</string>

    <string name="creator_hikingtrail_name">Nazwa trasy</string>
    <string name="creator_date">Data</string>
    <string name="creator_info_button">Info</string>
    <string name="creator_add_button">Dodaj</string>
    <string name="creator_reverse_button">Odwróć</string>
    <string name="creator_save_button">ZAPISZ</string>

    <string name="details_title">Szczegóły trasy: %s</string>
    <string name="details_dist">Dystans: %.2f km</string>
    <string name="details_points">Punkty: %d</string>
    <string name="details_time">Czas: %02d:%02d</string>

    <string name="track_list_name">Nazwa trasy</string>
    <string name="track_list_date">Planowana data</string>
    <string name="track_list_begin_end">%s ---> %s</string>
    <string name="track_list_unkown">Nieznana</string>

    <string name="track_list_dialog_remove">Czy jesteś pewien, że chcesz usunąć trasę? Ta operacja jest nieodwracalna</string>
    <string name="track_list_dialog_agree">Zatwierdź</string>
    <string name="track_list_dialog_cancel">Odrzuć</string>

    <string name="search_dialog_title">Wybierz punkt trasy</string>

    <string name="generated_dialog_min">Długość minimalna</string>
    <string name="generated_dialog_max">Długość maksymalna</string>

    <string name="err_not_enough_points">Niewystarczająca ilość punktów</string>
    <string name="err_begin_equals_end">Punkt startowy i końcowy odcinka jest taki sam!</string>
    <string name="err_no_points_found">Błąd przy tworzeniu odcinka</string>
    <string name="err_section_fail">Błąd przy tworzeniu odcinka</string>
    <string name="err_no_error">Pomyślnie utworzono trasę!</string>
    <string name="err_no_points_to_reverse">Podana trasa nie ma zdefiniowanych żadnych punktów!</string>
</resources>
